--- a/util/locales/de.json
+++ b/util/locales/de.json
@@ -1,4 +1,5 @@
 {
 	"PUSH_ALERT_FLU": "Grippewarnung! Heute gab es %s neue Infektionen in deinem Umkreis.",
-	"PUSH_REMINDER_HEALTHSTATE": "Deine letzten Gesundheits-Infos sind schon etwas älter. Bitte teile uns regelmäßig deinen Zustand mit, damit wir möglichst präzise Warnungen geben können."
+	"PUSH_REMINDER_HEALTHSTATE": "Deine letzten Gesundheits-Infos sind schon etwas älter. Bitte teile uns regelmäßig deinen Zustand mit, damit wir möglichst präzise Warnungen geben können.",
+	"PUSH_TEST": "Dies ist ein Test."
 }
